landing page done fully. Remaining the responsiveness and register and contact page

--- a/index.html
+++ b/index.html
@@ -5,29 +5,383 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>getLinked</title>
     <link rel="shortcut icon" href="./img/getlinked.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
     <div class="container">
-        <nav class="navbar">
-            <div class="logo">
-                <h3>getLinked</h3>
-            </div>
-            <a href="#" class="toggle-btn">
-                <img src="./img/Vector.png" alt="">
-            </a>
-            <div class="nav-links">
-                <ul class="menu">
-                    <li>Timeline</li>
-                    <li>Overview</li>
-                    <li>FAQs</li>
-                    <li>Contact</li>
-                </ul>
-                <div class="Reg-btn">
-                    <button>Register</button>
+        <header>
+            <nav class="navbar">
+                <div class="logo">
+                    <h3>getLinked</h3>
+                </div>
+                <a href="#" class="toggle-btn">
+                    <img src="./img/Vector.png" alt="">
+                </a>
+                <div class="nav-links">
+                    <ul class="menu">
+                        <li>Timeline</li>
+                        <li>Overview</li>
+                        <li>FAQs</li>
+                        <li>Contact</li>
+                    </ul>
+                    <div class="Reg-btn">
+                        <button>Register</button>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main class="main-cont">
+            <div class="hero-section">
+                <h1>
+                    Igniting a Revolution in HR Innovation
+                </h1>
+                <div class="text-img">
+                    <section class="hero-text">
+                        <h1>getlinked Tech Hackathon <span>1.0 <img src="./img/chain-9365116-7621444.png" alt="chain">
+                        <img src="./img/spark.png" alt="spark">
+                        </span></h1>
+                        <p>Participate in getlinked tech Hackathon 2023 stand a chance to win a Big prize</p>
+                        <button>Register</button>
+                        <section class="countdown">
+                            <span>00 <small>H</small></span>
+                            <span>00 <small>M</small></span>
+                            <span>00 <small>S</small></span>
+                        </section>
+                    </section>
+                    <section class="img-section">
+                        <img src="./img/man-wearing-smart-glasses-touching-virtual-screen 1.png" alt="" class="first-img">
+                        <img src="./img/Image 1.png" alt="" class="second-img">
+                    </section>
                 </div>
             </div>
-        </nav>
+            <!-- The Great Idea -->
+            <div class="second">
+                <section class="img-idea">
+                    <img src="./img/the big idea 1.png" alt="">
+                    <p>The Big <br> Idea</p>
+                    <img src="./img/arrow.png" alt="" class="arrow">
+                </section>
+                <section class="idea-text">
+                    <h3>Introduction to getlinked 
+                        <span><img src="./img/sata gra.png" alt=""></span>
+                        <span>techHackthaon 1.0</span>
+                    </h3>
+                    <p>Our tech hackathon is a melting pot of visionaries, and its purpose is as clear as day: to shape the future. Whether you're a coding genius, a design maverick, or a concept wizard, you'll have the chance to transform your ideas into reality. Solving real-world problems, pushing the boundaries of technology, and creating solutions that can change the world, that's what we're all about!</p>
+                </section>
+            </div>
+            <div class="third">
+                <section class="rules-text">
+                    <img src="./img/full-flare.png" alt="" class="third-flare">
+                    <h1>Rules and <span>Guidelines</span></h1>
+                    <p>
+                        Our tech hackathon is a melting pot of visionaries, and its      purpose is as
+                        clear as day: to shape the future. Whether you're a coding genius, a 
+                        design maverick, or a concept wizard, you'll have the chance to transform 
+                        your ideas into reality. Solving real-world problems, pushing the boundaries
+                        of technology, and creating solutions that can change the world,
+                        that's what we're all about!
+                    </p>
+                </section>
+                <section>
+                    <img src="./img/7450159 1.png" alt="" class="guide-img">
+                </section>
+            </div>
+            <div class="fourth">
+                <section class="criteria">
+                    <img src="./img/8046554 1.png" alt="" class="criteria-img">
+                    <img src="./img/sata gra.png" alt="star" class="fourth-star">
+                </section>
+                <section class="criteria-text">
+                    <h2>Judging Criteria <span>Key attributes</span></h2>
+                    <p>
+                        <span>Innovation and Creativity:</span> Evaluate the uniqueness and creativity of the solution. Consider whether it addresses a real-world problem in a novel way or introduces innovative features.
+                    </p>
+                    <p>
+                        <span>Functionality:</span> Assess how well the solution works. Does it perform its intended functions effectively and without major issues? Judges would consider the completeness and robustness of the solution.
+                    </p>
+                    <p>
+                        <span>Impact and Relevance:</span> Determine the potential impact of the solution in the real world. Does it address a significant problem, and is it relevant to the target audience? Judges would assess the potential social, economic, or environmental benefits.
+                    </p>
+                    <p>
+                        <span>Technical Complexity:</span> Evaluate the technical sophistication of the solution. Judges would consider the complexity of the code, the use of advanced technologies or algorithms, and the scalability of the solution.
+                    </p>
+                    <p>
+                        <span>Adhere to Hackathon Rules:</span> Judges will Ensure that the team adhered to the rules and guidelines of the hackathon, including deadlines, use of specific technologies or APIs, and any other competition-specific requirements.
+                    </p>
+                    <button><a href="#">Read More</a></button>
+                </section>
+            </div>
+            <div class="faqs">
+                <section class="accordion">
+                    <h2>Frequently Ask <span>Questions</span></h2>
+                    <p>
+                        We got answers to the questions that you might
+                        want to ask about getlinked Hackathon 1.0
+                    </p>
+                    <div class="content-box">
+                        <div class="label">Can I work on a project I started before the hackathon?</div>
+                        <div class="content">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content-box">
+                        <div class="label">What happens if I need help during the hackathon?</div>
+                        <div class="content">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content-box">
+                        <div class="label">What happens if I don't have an idea for a project?</div>
+                        <div class="content">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content-box">
+                        <div class="label">Can I join a team or do I have to come with one?</div>
+                        <div class="content">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content-box">
+                        <div class="label">What happens after the hackathon ends</div>
+                        <div class="content">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content-box">
+                        <div class="label">Can I work on a project I started before the hackathon?</div>
+                        <div class="content">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                    
+
+                </section>
+                <section class="accordion-img   ">
+                    <img src="./img/cwok_casual_21 1.png" alt="">
+                </section>
+            </div>
+            <!-- Timeline -->
+            <div class="timeline-header">
+                <h1>Timeline</h1>
+                <p>
+                    Here is the breakdown of the time we anticipate 
+                    using for the upcoming event.
+                </p>
+                <section class="timeline">
+                    <div class="timeline-content">
+                        <section class="text-box right">
+                            <h2>Hackathon Announcement</h2>
+                            <p>
+                                The getlinked tech hackathon 1.0 is formally announced
+                                to the general public and teams begin to get ready to register
+                            </p>
+                        </section>
+                        <section class="date">
+                            <h2>November 18, 2023</h2>
+                        </section>
+                    </div>
+                    <div class="timeline-content">
+                        <section class="date right">
+                            <h2>November 18, 2023</h2>
+                        </section>
+                        <section class="text-box">
+                            <h2>Teams Registration begins</h2>
+                            <p>
+                                Interested teams can now show their interest in the getlinked tech hackathon 1.0 2023 by proceeding to register
+                            </p>
+                        </section>
+                    </div>
+                    <div class="timeline-content">
+                        <section class="text-box right">
+                            <h2>Teams Registration ends</h2>
+                            <p>
+                                Interested Participants are no longer Allowed to register
+                            </p>
+                        </section>
+                        <section class="date">
+                            <h2>November 18, 2023</h2>
+                        </section>
+                    </div>
+                    <div class="timeline-content">
+                        <section class="date right">
+                            <h2>November 18, 2023</h2>
+                        </section>
+                        <section class="text-box">
+                            <h2>
+                                    Announcement of the accepted teams
+                                and ideas
+                            </h2>
+                            <p>
+                                All teams whom idea has been accepted into getlinked tech hackathon 1.0 2023 are formally announced
+                            </p>
+                        </section>
+                    </div>
+                    <div class="timeline-content">
+                        <section class="text-box right">
+                            <h2>Getlinked Hackathon 1.0 Offically Begins</h2>
+                            <p>
+                                Accepted teams can now proceed to build their ground breaking skill driven solutions
+                            </p>
+                        </section>
+                        <section class="date">
+                            <h2>November 18, 2023</h2>
+                        </section>
+                    </div>
+                    <div class="timeline-content">
+                        <section class="date right">
+                            <h2>November 18, 2023</h2>
+                        </section>
+                        <section class="text-box">
+                            <h2>Demo Day</h2>
+                            <p>
+                                Teams get the opportunity to pitch their projects to judges. <br>
+                                The winner of the hackathon will also be announced on this day
+                            </p>
+                        </section>
+                    </div>
+                </section>
+            </div>
+            <!-- Awards -->
+            <div class="awards">
+                <section class="prize">
+                    <img src="./img/prize.png" alt="">
+                </section>
+                <section class="position">
+                    <section class="second-position">
+                        <img src="./img/silver_medal 1.png" alt="">
+                        <h2>2nd <span>Runner</span></h2>
+                        <p>300,000</p>
+                    </section>
+                    <section class="first-position">
+                        <img src="./img/gold_medal 1.png" alt="">
+                        <h2>1st <span>Runner</span></h2>
+                        <h1>300,000</h1>
+                    </section>
+                    <section class="third-position">
+                        <img src="./img/bronze_medal 1.png" alt="">
+                        <h2>3rd <span>Runner</span></h2>
+                        <p>300,000</p>
+                    </section>
+                </section>
+            </div>
+            <!-- sponsors -->
+            <div class="sponsor">
+                <section>
+                    <h1>Partners and Sponsors</h1>
+                    <p>Getlinked Hackathon 1.0 is honored to have the following major 
+                        companies as its partners and sponsors</p>
+                </section>
+                <section class="sponsor-logo">
+                    <section style="border-right: 4px solid rgba(212, 52, 254, 1);
+                    ;">
+                        <img src="./img/Liberty company logo white colour.png" alt="">
+                    </section>
+                    <section style="border-right: 4px solid rgba(212, 52, 254, 1);
+                    ;">
+                        <img src="./img/Liberty company logo white.png" alt="">
+                    </section>
+                    <section>
+                        <img src="./img/Winwise logo White colour 1.png" alt="">
+                    </section>
+                    <section style="border-right: 4px solid rgba(212, 52, 254, 1);
+                    ;">
+                        <img src="./img/wisper logo white.png" alt="">
+                    </section>
+                    <section style="border-right: 4px solid rgba(212, 52, 254, 1);
+                    ;">
+                        <h1>Pay<span>box</span></h1>
+                    </section>
+                    <section>
+                        <h1>Visual Plus</h1>
+                    </section>
+                </section>
+            </div>
+            <!-- Privacy Policy -->
+            <div class="policy">
+                <section class="policy-text">
+                    <h1>Privacy Policy and <span>Terms</span></h1>
+                    <p>Last updated on September 12, 2023</p>
+                    <p>
+                        Below are our privacy & policy, which outline a lot of goodies. 
+                        it’s our aim to always take of our participant
+                    </p>
+                    <section class="policies">
+                        <p>
+                            At getlinked tech Hackathon 1.0, we value your privacy
+                            and are committed to protecting your personal information.
+                            This Privacy Policy outlines how we collect, use, disclose, 
+                            and safeguard your data when you participate in our tech 
+                            hackathon event. By participating in our event, you consent 
+                            to the practices described in this policy.
+                        </p>
+                        <h3>Licensing Policy</h3>
+                        <p>Here are terms of our Standard License:</p>
+                        <ul>
+                            <li>
+                                The Standard License grants you a non-exclusive right to navigate and register for our event
+                            </li>
+                            <li>
+                                You are licensed to use the item available at any free source sites, for your project developement
+                            </li>
+                        </ul>
+                        <button>Read More</button>
+                    </section>
+                </section>
+                <section class="policy-img">
+                    <img src="./img/08 1.png" alt="">
+                </section>
+            </div>
+        </main>
+        <footer>
+            <section class="footer-about">
+                <h1>get<span>Linked</span></h1>
+                <p>
+                    Getlinked Tech Hackathon is a technology innovation program 
+                    established by a group of organizations with the aim of showcasing 
+                    young and talented individuals in the field of technology
+                </p>
+            </section>
+            <section>
+                <h3>Useful Links</h3>
+                <ul>
+                    <li>Overview</li>
+                    <li>FAQs</li>
+                    <li>Timeline</li>
+                    <li>Register</li>
+                    <li>Follow Us
+                        <span></span><span></span><span></span>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3>Contact us</h3>
+                <ul>
+                    <li>+234 6707653444</li>
+                    <li>
+                        27,Alara Street
+                        Yaba 100012
+                        Lagos State
+                    </li>
+                </ul>
+            </section>
+        </footer>
     </div>
     <script src="./index.js"></script>
 </body>
