beautification in progress

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 </h1>
                 <div class="text-img">
                     <section class="hero-text">
+                        <img src="./img/sata gra.png" alt="" class="grey-star">
+                        <img src="./img/sata gra.png" alt="" class="normal-star">
                         <h1>getlinked Tech Hackathon <span>1.0 <img src="./img/chain-9365116-7621444.png" alt="chain">
                         <img src="./img/spark.png" alt="spark">
                         </span></h1>
@@ -61,20 +63,24 @@
             <!-- The Great Idea -->
             <div class="second">
                 <section class="img-idea">
+                    <img src="./img/sata gra.png" alt="" class="normal-star">
                     <img src="./img/the big idea 1.png" alt="">
                     <p>The Big <br> Idea</p>
                     <img src="./img/arrow.png" alt="" class="arrow">
                 </section>
                 <section class="idea-text">
                     <h3>Introduction to getlinked 
-                        <span><img src="./img/sata gra.png" alt=""></span>
+                        <img src="./img/sata gra.png" alt="" class="normal-star">
                         <span>techHackthaon 1.0</span>
                     </h3>
                     <p>Our tech hackathon is a melting pot of visionaries, and its purpose is as clear as day: to shape the future. Whether you're a coding genius, a design maverick, or a concept wizard, you'll have the chance to transform your ideas into reality. Solving real-world problems, pushing the boundaries of technology, and creating solutions that can change the world, that's what we're all about!</p>
                 </section>
             </div>
+            <!-- Rules and guidelines -->
             <div class="third">
                 <section class="rules-text">
+                    <img src="./img/sata gra.png" alt="" class="grey-star">
+                    <img src="./img/sata gra.png" alt="" class="grey-star-1">
                     <img src="./img/full-flare.png" alt="" class="third-flare">
                     <h1>Rules and <span>Guidelines</span></h1>
                     <p>
@@ -93,6 +99,9 @@
             <div class="fourth">
                 <section class="criteria">
                     <img src="./img/8046554 1.png" alt="" class="criteria-img">
+                    <div class="circle">
+
+                    </div>
                     <img src="./img/sata gra.png" alt="star" class="fourth-star">
                 </section>
                 <section class="criteria-text">
