registration form added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li>Contact</li>
                     </ul>
                     <div class="Reg-btn">
-                        <button>Register</button>
+                        <button><a href="./reg.html" target="_blank">Register</a></button>
                     </div>
                 </div>
             </nav>
@@ -64,7 +64,7 @@
             <div class="second">
                 <section class="img-idea">
                     <img src="./img/sata gra.png" alt="" class="normal-star">
-                    <img src="./img/the big idea 1.png" alt="">
+                    <img src="./img/the big idea 1.png" alt="" class="big-idea">
                     <p>The Big <br> Idea</p>
                     <img src="./img/arrow.png" alt="" class="arrow">
                 </section>
