--- a/reg.html
+++ b/reg.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <h3>getLinked</h3>
+                <h3><a href="index.html">getLinked</a></h3>
             </div>
             <a href="#" class="toggle-btn">
                 <img src="./img/Vector.png" alt="">
