--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </a>
                 <div class="nav-links">
                     <ul class="menu">
-                        <li>Timeline</li>
-                        <li>Overview</li>
-                        <li>FAQs</li>
+                        <li><a href="#timeline">Timeline</a></li>
+                        <li><a href="#overview">Overview</a></li>
+                        <li><a href="#faqs">FAQs</a></li>
                         <li>Contact</li>
                     </ul>
                     <div class="Reg-btn">
