backend api test

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <button><a href="#">Read More</a></button>
                 </section>
             </div>
-            <div class="faqs">
+            <div class="faqs" id="faqs">
                 <section class="accordion">
                     <h2>Frequently Ask <span>Questions</span></h2>
                     <p>
@@ -187,7 +187,7 @@
                 </section>
             </div>
             <!-- Timeline -->
-            <div class="timeline-header">
+            <div class="timeline-header" id="timeline">
                 <h1>Timeline</h1>
                 <p>
                     Here is the breakdown of the time we anticipate 
