--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/preloader.css">
 </head>
 <body>
+    <div class="preloader">
+        <div class="typewriter">
+            <div class="text">get <span>Linked...</span> </div>
+        </div>
+    </div>
     <div class="container">
         <header>
             <nav class="navbar">
@@ -26,7 +32,7 @@
                         <li><a href="#timeline">Timeline</a></li>
                         <li><a href="#overview">Overview</a></li>
                         <li><a href="#faqs">FAQs</a></li>
-                        <li>Contact</li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                     <div class="Reg-btn">
                         <button><a href="./reg.html" target="_blank">Register</a></button>
@@ -47,7 +53,7 @@
                         <img src="./img/spark.png" alt="spark">
                         </span></h1>
                         <p>Participate in getlinked tech Hackathon 2023 stand a chance to win a Big prize</p>
-                        <button>Register</button>
+                        <button><a href="./reg.html">Register</a></button>
                         <section class="countdown">
                             <span>00 <small>H</small></span>
                             <span>00 <small>M</small></span>
@@ -392,6 +398,7 @@
             </section>
         </footer>
     </div>
-    <script src="./index.js"></script>
+    <script src="./Js/index.js"></script>
+    <script src="./Js/preloader.js"></script>
 </body>
 </html>
