--- a/reg.html
+++ b/reg.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registration Getlinked</title>
     <!-- css -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/reg.css">
 </head>
 <body>
@@ -18,10 +22,10 @@
             </a>
             <div class="nav-links">
                 <ul class="menu">
-                    <li>Timeline</li>
-                    <li>Overview</li>
-                    <li>FAQs</li>
-                    <li>Contact</li>
+                        <li><a href="#timeline">Timeline</a></li>
+                        <li><a href="#overview">Overview</a></li>
+                        <li><a href="#faqs">FAQs</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                 </ul>
                 <div class="Reg-btn">
                     <button><a href="./reg.html" target="_blank">Register</a></button>
@@ -88,6 +92,39 @@
             </form>
         </div>
     </main>
+    <footer>
+        <section class="footer-about">
+            <h1>get<span>Linked</span></h1>
+            <p>
+                Getlinked Tech Hackathon is a technology innovation program 
+                established by a group of organizations with the aim of showcasing 
+                young and talented individuals in the field of technology
+            </p>
+        </section>
+        <section>
+            <h3>Useful Links</h3>
+            <ul>
+                <li>Overview</li>
+                <li>FAQs</li>
+                <li>Timeline</li>
+                <li>Register</li>
+                <li>Follow Us
+                    <span></span><span></span><span></span>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>Contact us</h3>
+            <ul>
+                <li>+234 6707653444</li>
+                <li>
+                    27,Alara Street
+                    Yaba 100012
+                    Lagos State
+                </li>
+            </ul>
+        </section>
+    </footer>
     <script src="./index.js"></script>
     <script src="./reg.js"></script>
 </body>
