--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <h1>Privacy Policy and <span>Terms</span></h1>
                     <p>Last updated on September 12, 2023</p>
                     <p>
-                        Below are our privacy & policy, which outline a lot of goodies. 
+                        Below are our privacy & policy, which outline a lot of goodies. <br>
                         it’s our aim to always take of our participant
                     </p>
                     <section class="policies">
@@ -360,7 +360,8 @@
                     </section>
                 </section>
                 <section class="policy-img">
-                    <img src="./img/08 1.png" alt="">
+                    <img src="./img/Vector1.png" alt="" class="safety">
+                    <img src="./img/08 1.png" alt="" class="padlock">
                 </section>
             </div>
         </main>
