--- a/reg.html
+++ b/reg.html
@@ -126,6 +126,6 @@
         </section>
     </footer>
     <script src="./index.js"></script>
-    <script src="./reg.js"></script>
+    <script src="./js/reg.js"></script>
 </body>
 </html>
