--- a/contact.html
+++ b/contact.html
@@ -103,6 +103,6 @@
             </section>
         </footer>
     <script src="./index.js"></script>
-    <script src="./contact.js"></script>
+    <script src="./Js/"></script>
 </body>
 </html>
