--- a/reg.html
+++ b/reg.html
@@ -10,8 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/reg.css">
+    <link rel="stylesheet" href="./CSS/preloader.css">
 </head>
 <body>
+    <div class="preloader">
+        <div class="typewriter">
+            <div class="text">get <span>Linked...</span> </div>
+        </div>
+    </div>
     <header>
         <nav class="navbar">
             <div class="logo">
@@ -127,5 +133,6 @@
     </footer>
     <script src="./index.js"></script>
     <script src="./js/reg.js"></script>
+    <script src="./Js/preloader.js"></script>
 </body>
 </html>
