--- a/reg.html
+++ b/reg.html
@@ -131,7 +131,7 @@
             </ul>
         </section>
     </footer>
-    <script src="./index.js"></script>
+    <script src=".js/index.js"></script>
     <script src="./js/reg.js"></script>
     <script src="./Js/preloader.js"></script>
 </body>
