--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                 </ul>
             </section>
         </footer>
-    <script src="./index.js"></script>
+    <script src=".js/index.js"></script>
     <script src="./Js/"></script>
     <script src="./Js/preloader.js"></script>
 </body>
