--- a/reg.html
+++ b/reg.html
@@ -131,8 +131,8 @@
             </ul>
         </section>
     </footer>
-    <script src=".js/index.js"></script>
-    <script src="./js/reg.js"></script>
+    <script src="./Js/index.js"></script>
+    <script src="./Js/reg.js"></script>
     <script src="./Js/preloader.js"></script>
 </body>
 </html>
